<resources>
    <string name="app_name">Rxzone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="enteremail">Enter Email Or DEA</string>
    <string name="password">Password</string>


    <string name="email">Enter Email</string>

    <string name="rememberme">Remember me</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="sign">Sign In</string>

    <string name="submit">Submit</string>

    <string name="product_name">#Name : N/A</string>

    <string name="product_dosage">#Dosage : N/A</string>
    <string name="product_exp">#Exp Date (Days) : N/A</string>

    <string name="ndcnumber">NDC Number</string>
    <string name="lotnumber">Lot Number</string>

    <string name="expiration">Expiration Date</string>
    <string name="packquaty">Pack Quantity</string>

    <string name="packageavail">Packages Available</string>
    <string name="priceopt">Price Option</string>
    <string name="wacprice">WAC Price</string>
    <string name="wacdiscount">WAC Discount</string>
    <string name="pacprice">Pack Price</string>
    <string name="packagecon">Package Condition</string>
    <string name="doyouwant">Do you want to pay for ground shipping?</string>
    <string name="selectshipping">Select Shipping method?</string>

    <string name="reset">Reset</string>
    <string name="submittitle">Submit</string>

    <string name="proccedpay">Proceed to pay</string>

    <string name="mfdfixed">MFR : Fixed</string>
    <string name="price">Price : 180</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string-array name="productsubinfoarray">
        <item>NDC / PROC ID</item>
        <item>Pack Size</item>
        <item>Dosage Form</item>
        <item>Exp Date(Days)</item>
        <item>Supplier</item>
        <item>WAC/AWP Spread</item>
        <item>Qty Avl</item>
    </string-array>




    <string name="supplierbill">Supplier Bill</string>

    <string name="itemtotal">Item Total</string>

    <string name="shipping">Shipping</string>

    <string name="topay">To Pay</string>
    <string name="orderconfirm">Order Confirm</string>

    <string name="amountindollor">$ 72</string>
    <string name="amountindollordifferent">$ 144</string>

    <string name="productsubinfo">#Product Sub info</string>


    <string name="ndcprocid">NDC / PROC ID</string>
    <string name="packsize">Pack Size</string>
    <string name="dosageform">Dosage Form</string>
    <string name="expdate">Exp Date (Days)</string>
    <string name="supplier">Supplier</string>
    <string name="Wac">WAC / AWP Spread</string>
    <string name="qtyavail">Qty Avl</string>

    <string name="shippingaddress">SHIPPING ADDRESS</string>

    <string name="currentlocation">Current Location</string>

    <!--Payment Method-->
    <string name="paymentmethod">Payments Method</string>
    <string name="banktransfor">Bank Transfer</string>
    <string name="internetbanking">Internet Banking</string>
    <string name="cashondel">Cash On Delivery </string>
    <string name="debitcard">Debit Card</string>
    <string name="creditcard">Credit Card</string>


    <!--SHIPPING METHOD-->
    <string name="shippingmethod">SHIPPING METHOD</string>
    <string name="airplan">Airplane</string>
    <string name="transport">Transport</string>
    <string name="train">Train</string>

    <string name="proccedtopay">Procced to pay</string>




</resources>
