<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_above="@+id/bottomview">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten"
                android:background="@drawable/submit_rectangle"
                android:backgroundTint="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subinfoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/shippingaddress"
                    android:textColor="@color/text_label_color_streakfit"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/two"
                    android:background="@color/colorAccent1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/ten">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rememberRbtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/currentlocation"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />
                    </RadioGroup>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginRight="@dimen/ten"
                android:background="@drawable/submit_rectangle"
                android:backgroundTint="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/shippingmethod"
                    android:textColor="@color/text_label_color_streakfit"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/two"
                    android:background="@color/colorAccent1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/ten">

                    <RadioGroup
                        android:id="@+id/shippingradioMethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/airplaneradiobtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/airplan"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/transportradiobtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/transport"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/trainradiobtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/train"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />

                    </RadioGroup>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginRight="@dimen/ten"
                android:layout_marginTop="@dimen/ten"
                android:background="@drawable/submit_rectangle"
                android:backgroundTint="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/paymentmethod"
                    android:textColor="@color/text_label_color_streakfit"
                    android:textSize="15sp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/two"
                    android:background="@color/colorAccent1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/ten">

                    <RadioGroup
                        android:id="@+id/paymentradioGrpMethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/banktrnfrradiobtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/banktransfor"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/internetradiobtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/internetbanking"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/cashradiobtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cashondel"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/debitradiobtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/debitcard"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/creditradiobtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/creditcard"
                            android:textColor="@color/list_group_title"
                            android:textSize="15sp" />

                    </RadioGroup>


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomview"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/ten"
        android:orientation="horizontal">


        <Button
            android:id="@+id/proceedBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red_dark"
            android:paddingLeft="25dp"
            android:text="@string/proccedtopay"
            android:textAllCaps="true"
            android:textColor="@color/white" />


    </LinearLayout>
</RelativeLayout>
