<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/five"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:maxLines="1"
            android:text="@string/supplierbill"
            android:textColor="@color/colorAccent"
            android:textSize="13sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten">

            <TextView
                android:id="@+id/itemtotaltxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="1"
                android:text="@string/itemtotal"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/itemtotalpricetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/ten"
                android:layout_marginTop="@dimen/two"
                android:maxLines="1"
                android:text="@string/amountindollor"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/ten">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="1"
                android:text="@string/shipping"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/shippingpricetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/ten"
                android:layout_marginTop="@dimen/two"
                android:maxLines="1"
                android:text="@string/amountindollor"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/eigth"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two"
            android:paddingBottom="@dimen/eigth"
            android:paddingTop="@dimen/eigth">

            <TextView
                android:id="@+id/mfdtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/two"
                android:maxLines="1"
                android:text="@string/topay"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/pricetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/ten"
                android:layout_marginTop="@dimen/two"
                android:maxLines="1"
                android:text="@string/amountindollordifferent"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/eigth"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/twenty"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginTop="@dimen/fifteen"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/submit_rectangle"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/orderconfirm"

                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/thirteen" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
