<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/submit_rectangle"
        android:backgroundTint="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/postimg"
            android:layout_width="110dp"
            android:layout_height="120dp"

            android:background="@drawable/postimage" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/postimg"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/five"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/postTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/product_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/postinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two"
                    android:maxLines="1"
                    android:text="@string/product_dosage"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/postdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two"
                    android:maxLines="1"
                    android:text="@string/product_exp"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/two"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mfdtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="@dimen/two"
                        android:maxLines="1"
                        android:text="@string/mfdfixed"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/pricetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/two"
                        android:maxLines="1"
                        android:text="@string/amountindollor"
                        android:textSize="12sp" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"


                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginLeft="30dp"
                android:gravity="center">

                <include layout="@layout/card_bottom_cart" />
            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
