<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scroollay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/logosmallicon" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ten"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/ten"
                        android:drawableBottom="@color/red"
                        android:text="@string/forgotpassword"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark1"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/username_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/empty"
                        android:drawableLeft="@drawable/useridsmallicon"
                        android:drawablePadding="@dimen/eigth"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="@dimen/ten"
                        android:background="@color/grey" />


                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginLeft="@dimen/ten"
                        android:layout_marginRight="@dimen/ten"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/submit_rectangle"
                        android:backgroundTint="@color/colorPrimaryDark1"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp" />


                </LinearLayout>
            </ScrollView>

            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/ten"
                 android:gravity="center"

                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/registertxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/register"
                     android:textColor="@color/or_color"
                     android:textSize="17sp"
                     android:textStyle="bold" />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/ten"
                     android:gravity="center_vertical"
                     android:text="|" />

                 <TextView
                     android:id="@+id/forgottxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/ten"
                     android:text="@string/forgotpassword"
                     android:textColor="@color/HeaderTitleColor"
                     android:textSize="17sp" />
             </LinearLayout>-->


        </LinearLayout>
    </ScrollView>

    <com.leo.simplearcloader.SimpleArcLoader
        android:id="@+id/arc_loader"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        custom:arc_colors="@color/colorPrimaryDark"
        custom:arc_margin="3dp"
        custom:arc_speed="medium"
        custom:arc_style="simple_arc"
        custom:arc_thickness="3dp" />

</RelativeLayout>
